| Bug #18385 | partial restart failure after create table | ||
|---|---|---|---|
| Submitted: | 21 Mar 2006 10:33 | Modified: | 27 Mar 2006 15:54 |
| Reporter: | Tomas Ulin | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S2 (Serious) |
| Version: | 4.1,5.0,5.1 | OS: | |
| Assigned to: | Jonas Oreland | Target Version: | |
[21 Mar 2006 10:33]
Tomas Ulin
[21 Mar 2006 14:55]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/3992
[23 Mar 2006 15:35]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/4072
[24 Mar 2006 13:29]
Jonas Oreland
pushed for 2-node cluser into 5.1.8
[27 Mar 2006 12:12]
Jonas Oreland
pushed into 5.0.20
[27 Mar 2006 14:04]
Jonas Oreland
pushed into 4.1.19
[27 Mar 2006 14:08]
Jonas Oreland
The fix that has been pushed does only work for 2-node clusters. To handle bigger cluster, we need "graceful stop nodes" which stops a bunch of nodes within same GCI.
[27 Mar 2006 15:54]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented bugfix with note of current limitation in 4.1.19, 5.0.20, and 5.1.8
changelogs. Bug report closed.
