ndb - bug#18385   Partial system restart, can not try to start with higher GCI that own   even if knowing about a higher number